# RV-16-EMU

./: CMakeLists.txt  README.md  RV-16.cpp  a.c  as16.py  assembler  cpu.sh  main.hex  main.s  tmp  tmp.cpp
asm/: add.s  instruc.s  label.s  lui.s  main.s  movi.s  movi_label.s  nested_sub_calls.s
